--- a/backend_nciipc/.env
+++ b/backend_nciipc/.env
@@ -42,10 +42,10 @@ Org_ES = 'organizations'
 stixBaseUrl = 'http://192.168.8.160:5555/cluster2_api/v1.0/'
 
 # mysql
-# DB_Host = '192.168.8.160'
-DB_Host = '164.164.32.6'
-DB_User = 'root'
-# DB_User = 'dashboard'
+DB_Host = '192.168.8.160'
+# DB_Host = '164.164.32.6'
+# DB_User = 'root'
+DB_User = 'dashboard'
 DB_Database = 'honeybox'
 # DB_Database = 'nccc_honeybox_new'
 DB_Password = 'security#cstd#26'
